--- a/.github/workflows/update_commit_count.yml
+++ b/.github/workflows/update_commit_count.yml
@@ -8,25 +8,26 @@ on:
 jobs:
   update_commit_count:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: "lts/*"
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Fetch commit count and update file
-      run: node update_commit_count.js
+      - name: Run update_commit_count script
+        run: node update_commit_count.js
+        env:
+          GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
-    - name: Commit and push changes
-      run: |
-        git config user.name "GitHub Action"
-        git config user.email "action@github.com"
-        git add commit_count.json
-        git diff --cached --exit-code || (git commit -m "Update commit count" && git push)
+      - name: Commit and push changes
+        run: |
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          git add commit_count.json
+          git diff --cached --exit-code || (git commit -m "Update commit count" && git push)
